@@ -205,7 +205,7 @@ OP_ChannelMessage=0x2e79			# C
 OP_Assist=0x0000					# C
 OP_AssistGroup=0x0000				# C
 OP_MoveCoin=0x0000					# C
-OP_ZonePlayerToBind=0x0000			# C
+OP_ZonePlayerToBind=0x0a59			# C
 OP_KeyRing=0x0000					# C
 OP_WhoAllRequest=0x0000				# C
 OP_WhoAllResponse=0x0000			# C
@@ -306,7 +306,7 @@ OP_PVPLeaderBoardReply=0x0000		# C
 OP_PVPLeaderBoardDetailsRequest=0x0000	# C
 OP_PVPLeaderBoardDetailsReply=0x0000	# C
 OP_RestState=0x0000					# C
-OP_RespawnWindow=0x0000				# C
+OP_RespawnWindow=0x4e4e				# C
 OP_DisciplineTimer=0x0000			# C
 OP_LDoNButton=0x0000				# C
 OP_SetStartCity=0x0000				# C
