@@ -1,0 +1,14 @@
+OP_ZoneEntry=0x002b
+OP_PlayerProfile=0x6022
+OP_SpawnDoor=0x465e
+OP_GroundSpawn=0x5f0d
+OP_ShopRequest=0x1044
+OP_ShopEnd=0x3753
+OP_ItemPacket=0x6a30
+OP_SendZonepoints=0x5f51
+OP_NewZone=0x0254
+OP_NPCMoveUpdate=0x38f9
+OP_MobUpdate=0x4656
+OP_ClientUpdate=0x7062
+OP_SendFindableNPCs=0x6b67
+OP_SendAATable=0x1bd4
